fixed button aligned bottom

--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -11,7 +11,7 @@ fieldset {
 .lighbox-fieldset-double {
   width: 80%;
   margin: 0 auto;
-    padding: 0px;
+  padding: 0px;
 }
 
 .lighbox-fieldset-checkbox {
@@ -36,12 +36,9 @@ label {
 .label-text {
 
   @media only screen and (min-width: 768px){
-  font-size: 1rem;
+    font-size: 1rem;
   }
-    }
-
-//.lighbox-fieldset-double>label {
-
+}
 
 /*Estilando estados del input*/
 input {
@@ -73,7 +70,8 @@ input:hover:-ms-input-placeholder {
 }
 
 
-/*NEW CHECKBOX*/
+/*CHECKBOX*/
+
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 input[type=checkbox] { display:none; } /* to hide the checkbox itself */
 input[type=checkbox] + label:before {
@@ -89,108 +87,3 @@ input[type=checkbox] + label:before { letter-spacing: 10px;  } /* space between 
 input[type=checkbox]:checked + label:before { content: "\f046";  } /* checked icon */
 input[type=checkbox]:checked + label:before { color:$primaryColorBgGreen; } /* allow space for check mark */
 
-
-
-
-/*Checkbox estilado
-
-input[type='checkbox']{ 
-  height: 0; 
-  width: 0;
-  display:none;
-}
-
-input[type='checkbox'] + label{
-  position: relative;
-  display: flex;
-  margin: 1em;
-  align-items: center;
-  color: #9e9e9e;
-  transition: color 250ms cubic-bezier(.4,.0,.23,1);
-}
-input[type='checkbox'] + label > ins{
-  position: absolute;
-  display: block;
-  bottom: 0;
-  left: 2em;
-  height: 0;
-  width: 100%;
-  overflow: hidden;
-  text-decoration: none;
-  transition: height 300ms cubic-bezier(.4,.0,.23,1);
-}
-input[type='checkbox'] + label > ins > i{
-  position: absolute;
-  bottom: 0;
-  font-style: normal;
-  color: $primaryColorBgBlue;
-}
-input[type='checkbox'] + label > span{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 1em;
-  width: 1em;
-  height: 1em;
-  background: transparent;
-  border: 2px solid #9E9E9E;
-  border-radius: 2px;
-  cursor: pointer;  
-  transition: all 250ms cubic-bezier(.4,.0,.23,1);
-}
-
-input[type='checkbox'] + label:hover, input[type='checkbox']:focus + label{
-  color: $primaryColorBgBlue;
-}
-input[type='checkbox'] + label:hover > span, input[type='checkbox']:focus + label > span{
-  background: rgba(255,255,255,.1);
-  border: 2px solid $primaryColorBgBlue;
-}
-input[type='checkbox']:checked + label > ins{ height: 100%; }
-
-input[type='checkbox']:checked + label > span{
-  border: .5em solid $primaryColorBgBlue;
-  animation: shrink-bounce 200ms cubic-bezier(.4,.0,.23,1);
-}
-input[type='checkbox']:checked + label > span:before{
-  content: "";
-  position: absolute;
-  top: .6em;
-  left: .2em;
-  border-right: 3px solid transparent;
-  border-bottom: 3px solid transparent;
-  transform: rotate(45deg);
-  transform-origin: 0% 100%;
-  animation: checkbox-check 125ms 250ms cubic-bezier(.4,.0,.23,1) forwards;
-}
-
-@keyframes shrink-bounce{
-  0%{
-    transform: scale(1);
-  }
-  33%{    
-    transform: scale(.85);
-  }
-  100%{
-    transform: scale(1);    
-  }
-}
-@keyframes checkbox-check{
-  0%{
-    width: 0;
-    height: 0;
-    border-color: #fff;
-    transform: translate3d(0,0,0) rotate(45deg);
-  }
-  33%{
-    width: .2em;
-    height: 0;
-    transform: translate3d(0,0,0) rotate(45deg);
-  }
-  100%{    
-    width: .2em;
-    height: .5em;    
-    border-color: #212121;
-    transform: translate3d(0,-.5em,0) rotate(45deg);
-  }
-}*/
